--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2025.3.2"
+    id "edu.wpi.first.GradleRIO" version "2026.1.1"
 }
 
 java {
@@ -9,12 +9,6 @@ java {
 }
 
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
-
-repositories {
-    mavenCentral()
-    // YAGSL "online" dependency repository (formerly provided via vendordep).
-    maven { url = uri("https://broncbotz3481.github.io/YAGSL-Lib/yagsl/repos") }
-}
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
@@ -40,7 +34,7 @@ deploy {
                     files = project.fileTree('src/main/deploy')
                     directory = '/home/lvuser/deploy'
                     deleteOldFiles = false // Change to true to delete files on roboRIO that no
-                    // longer exist in deploy directory of this project
+                                           // longer exist in deploy directory of this project
                 }
             }
         }
@@ -49,11 +43,18 @@ deploy {
 
 def deployArtifact = deploy.targets.roborio.artifacts.frcJava
 
-// Set to true to use debug for JNI.
+// Set to true to use debug for all targets including JNI, which will drastically impact
+// performance.
 wpi.java.debugJni = false
 
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
+
+repositories {
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+}
+
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
@@ -79,8 +80,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // Use ONLY the "online" YAGSL dependency (not the vendordep copy).
-    implementation 'swervelib:YAGSL-java:2025.8.0'
+    implementation 'com.github.YAGSL:swervelib:2025.3.1'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 test {
