--- a/.gitignore
+++ b/.gitignore
@@ -168,13 +168,11 @@ out/
 # Fleet
 .fleet
 
-# Simulation GUI and other tools window save file
-networktables.json
-simgui.json
-*-window.json
-
 # Simulation data log directory
 logs/
+
+simgui-window.json
+simgui-ds.json
 
 # Folder that has CTRE Phoenix Sim device config storage
 ctre_sim/
@@ -182,6 +180,3 @@ ctre_sim/
 # clangd
 /.cache
 compile_commands.json
-
-# Eclipse generated file for annotation processors
-.factorypath
